# hummingbird

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  environment.yml  make_files.sh
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README
include/: enums.h  material.h  ordinate.h
include/math/: legendre_polynomials.h
include/mesh/: element.h  node.h  segment.h
include/physics/: constant_source.h  source_base.h
include/quadrature/: gauss_chebyshev.h  gauss_legendre.h  gauss_legendre_lobatto.h  gauss_legendre_quadrature.h  gauss_lobatto_quadrature.h  gl_angular_quadrature.h  gl_quadrature.h  quadrature.h  quadrature_base.h
include/utils/: constants.h  misc.h
src/: CMakeLists.txt  ordinate.cc
src/math/: legendre_polynomials.cc
src/mesh/: element.cc  segment.cc
src/physics/: constant_source.cc  source_base.cc
src/quadrature/: gauss_chebyshev.cc  gauss_legendre.cc  gauss_legendre_lobatto.cc  gauss_lobatto_quadrature.cc  gl_angular_quadrature.cc  gl_quadrature.cc  quadrature.cc
src/utils/: misc.cc
tests/: CMakeLists.txt  always_true_test.cc  ordinate_tests.cc
tests/math/: legendre_polynomials_tests.cc
tests/mesh/: element_tests.cc  segment_tests.cc
tests/physics/: constant_source_tests.cc
tests/quadrature/: gauss_chebyshev_tests.cc  gauss_legendre_lobatto_tests.cc  gauss_legendre_tests.cc  gauss_lobatto_quadrature_tests.cc  gl_quadrature_tests.cc  helpers.cc  helpers.h
tests/utils/: misc_tests.cc
